fix(ai-chat): repair kid-safety seeding into Open WebUI
The seeder ran as root, so on first boot sqlite-jdbc created webui.db
owned by root. Open WebUI's DynamicUser (PrivateUsers) could then no
longer write it, failing with "attempt to write a readonly database".
Run the seeder as the same DynamicUser/namespace as open-webui so the DB
and its -wal/-shm files are written with the same on-disk owner.

Also fix the ExecStart, which NixOS emitted as six separate lines (a
flat list instead of a nested command list) and made java print usage,
and compile SeedGates.java at build time so the single-file launcher no
longer rejects the Nix store basename as an invalid class name.